# qt5-cmake-conan-example

./: CMakeLists-add-quick-control.txt  CMakeLists.txt  GPATH  GRTAGS  GTAGS  InterfaceWithOpenCV.cpp  LICENSE  Logger.cpp  Logger.h  README.md  conanfile.py  main.cpp  main.h  main.qml  qml.qrc  qt5-cmake-conan-example.code-workspace  tcp_client_coro.cpp  tcp_client_timeout.cpp  test.cpp  test.h  test_concurent.cpp  test_concurent.h  test_thread2.cpp  test_thread2.h
